--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib, CThread, MThread
+  exposed-modules:     Lib, CThread, MThread, SThread
   build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6
   default-language:    Haskell2010
 
