--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -19,7 +19,7 @@ library
   build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6
   default-language:    Haskell2010
 
-executable anvizProxy-exe
+executable anvizProxy
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
