--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib, CThread, MThread, SThread
-  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6, timers >= 0.2, suspend >= 0.2
+  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6, timers >= 0.2, suspend >= 0.2, process
   default-language:    Haskell2010
 
 executable anvizProxy
