--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -15,8 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib, CThread, MThread, SThread
-  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6, timers >= 0.2, suspend >= 0.2, process, yaml, crc16
+  exposed-modules:     Lib, CThread, MThread, SThread, SerialThread
+  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6, timers >= 0.2, suspend >= 0.2, process, yaml, serialport
   default-language:    Haskell2010
 
 executable anvizProxy
