--- a/stack.yaml
+++ b/stack.yaml
@@ -3,7 +3,7 @@ extra-package-dbs: []
 packages:
 - '.'
 extra-deps:
-- crc16-0.1.0
+- serialport-0.4.7
 - suspend-0.2.0.0
 - timers-0.2.0.3
 resolver: lts-8.5
