--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -16,13 +16,13 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib, CThread, MThread, SThread, SerialThread
-  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6, timers >= 0.2, suspend >= 0.2, process, yaml, serialport, pipes
+  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10, network-simple >= 0.4, network >= 2.6, timers >= 0.2, suspend >= 0.2, process, yaml, serialport
   default-language:    Haskell2010
 
 executable anvizProxy
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O -threaded -rtsopts -with-rtsopts=-N 
   build-depends:       base
                      , anvizProxy, bytestring, network-simple, network, yaml
   default-language:    Haskell2010
