--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -22,7 +22,7 @@ library
 executable anvizProxy
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O -threaded -rtsopts -with-rtsopts=-N 
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -debug
   build-depends:       base
                      , anvizProxy, bytestring, network-simple, network, yaml
   default-language:    Haskell2010
