--- a/src/config.yaml
+++ b/src/config.yaml
@@ -19,4 +19,5 @@ actions:
 
 logger:
     logger_path:     "./anvizProxy.log"
-    logger_level:    DEBUG
+    logger_level:    DEBUG #DEBUG|INFO|NOTICE|WARNING|ERROR|CRITICAL|ALERT|EMERGENCY
+    logger_format:   "$utcTime ($prio) $msg" #not yet realized
