--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,23 +1,23 @@
 anviz:
-    anviz_ip:       "192.168.0.247"
+    anviz_ip:       192.168.0.247
     anviz_port:     "5010"
     anviz_users:    [[0,0,0,0,1], [0,0,0,0,8]]
     anviz_enable:   True
 
 serial:
-    serial_port:    "/dev/ttyUSB0"
+    serial_port:    /dev/ttyUSB0
     serial_users:   ["a34", "b48"]
     serial_enable:   True
 
 server:
-    server_eth:     "any" #"192.168.1.2", or "any" #not yet realized
+    server_eth:     any #"192.168.1.2", or "any" #not yet realized
     server_port:    "5010"
-    server_enable:   True
+    server_enable:  True
 
 actions:
-    run:            "sh ./script.sh"
+    run:            sh ./script.sh
 
 logger:
-    logger_path:     "./anvizProxy.log"
+    logger_path:     ./anvizProxy.log
     logger_level:    DEBUG #DEBUG|INFO|NOTICE|WARNING|ERROR|CRITICAL|ALERT|EMERGENCY
     logger_format:   "$utcTime ($prio) $msg" #not yet realized
