--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,13 +1,18 @@
 anviz:
     anviz_ip:       192.168.0.247
     anviz_port:     "5010"
-    anviz_users:    [[0,0,0,0,1], [0,0,0,0,8]]
+    anviz_users:    
+                    - [0,0,0,0,1] 
+                    - [0,0,0,0,8]
     anviz_enable:   True
 
 serial:
     serial_port:    /dev/ttyUSB0
-    serial_users:   ["a34", "b48"]
-    serial_enable:   True
+    serial_users:   
+                    - "a34\r"
+                    - "b48"
+                    #- "\r"
+    serial_enable:  True
 
 server:
     server_eth:     any #"192.168.1.2", or "any" #not yet realized
