--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -22,7 +22,7 @@ library
 executable anvizProxy
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -debug
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -debug -fllvm -keep-llvm-files
   build-depends:       base
                      , anvizProxy, bytestring, network-simple, network, yaml, hslogger
   default-language:    Haskell2010
