--- a/anvizProxy.cabal
+++ b/anvizProxy.cabal
@@ -22,7 +22,8 @@ library
 executable anvizProxy
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -debug -fllvm -keep-llvm-files
+  --ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -debug -fllvm -keep-llvm-files
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -debug
   build-depends:       base
                      , anvizProxy, bytestring, network-simple, network, yaml, hslogger
   default-language:    Haskell2010
